--- a/styles.css
+++ b/styles.css
@@ -316,6 +316,9 @@ footer {
 }
 
 @media (max-width: 576px) {
+    html {
+        overflow-x: hidden;
+    }
     body {
         display: flex;
         flex-direction: column;
