--- a/styles.css
+++ b/styles.css
@@ -112,10 +112,22 @@ hr {
     margin-right: 7%;
     padding-bottom: 100px;
 }
-.practiceServicesimg.is-visible {
+.practiceServiceItems {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid red;
+    justify-content: space-between;
+}
+.practiceServiceContent {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+/* .practiceServicesimg.is-visible {
     animation: fadeInUp;
     animation-duration: 2s;
-}
+} */
 .expert {
     background-color: rgb(249,249,249);
 }
@@ -309,10 +321,10 @@ footer {
     display: none;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 950px) {
     body {
         /* display: flex; */
-        flex-direction: column;
+        /* flex-direction: column; */
         flex-wrap: wrap;
         overflow-x: hidden;
         max-width: auto;
@@ -329,6 +341,16 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    .headerParagraph {
+        text-align: center;
+    }
+    .headerParagraphContent {
+        margin: auto 10%;
+    }
+    .aboutImageImg {
+        width: 100%;
+        height: auto;
     }
     .about {
         display: flex;
@@ -347,8 +369,15 @@ footer {
     .practiceServicesimg {
         max-width: 500px;
     }
+    .expertImages {
+        width: 100%;
+        height: auto;
+    }
     .hireImage {
         display: none;
+    }
+    .hireTitle {
+        text-align: center;
     }
     .clientOne.is-visible {
         animation: none;
@@ -375,6 +404,14 @@ footer {
     }
     .consultationImage {
         display: none;
+    }
+    .additionalInfoContent{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .getInTouch {
+        padding-top: 20px;
     }
     
 
