finishing blog page

--- a/blogPage/styles.css
+++ b/blogPage/styles.css
@@ -1,10 +1,10 @@
 
 .header {
     background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../images/page-title/1.jpg);
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: 0% 0% !important;
+    /* background-attachment: fixed; */
+    background-position: center;
 }
 .navbar {
     display: flex;
@@ -29,6 +29,7 @@
     color: white;
     padding-bottom: 20px;
     font-size: 3.5em;
+    font-weight: 400;
 }
 .breadcrumb {
     background: none;
@@ -37,7 +38,6 @@
     display: flex;
     align-items: center;
     padding-top: 50px;
-    border: 1px solid blue;
     padding-bottom: 5%;
     justify-content: center;
     /* margin: 0 auto; */
@@ -47,7 +47,6 @@
     width: 60%;
     margin: auto;
     padding-bottom: 3%;
-    border: 1px solid red;
 }
 .blogImages {
     display: block;
@@ -77,6 +76,7 @@ h6 {
 .infoParagraph{
     text-align: left;
     padding-left: 10%;
+    padding-right: 5%;
 }
 .addressEmail {
     color: darkgrey;
@@ -100,4 +100,26 @@ footer {
     padding-top: 20px;
     padding-bottom: 10px;
     text-align: center;
+}
+
+
+
+@media (max-width: 950px) {
+.blog {
+    display: flex;
+    flex-direction: column;
+}
+.additionalInfoContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.infoParagraph {
+    align-items: center;
+    width: 100%;
+}
+.headerParagraphTitle {
+    font-size: xx-large;
+}
+
 }
