--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
 .freeConsultation {
 	margin-bottom: 30px;
 }
-<<<<<<< HEAD
+
 .statBox {
 	/* min-width: 100%; */
 	display: flex;
@@ -59,10 +59,7 @@ body {
 	margin-top: -60px;
 	border-radius: 5px;
 }
-.statBoximg.is-visible {
-	animation: fadeInDown;
-	animation-duration: 2s;
-=======
+
 .statBoxItems {
     display: flex;
     /* flex-direction: row; */
@@ -70,10 +67,10 @@ body {
     /* position: relative; */
     background-color: rgb(249,249,249);
 }
-/* .statBoxItems.is-visible {
+.statBoxItems.is-visible {
     animation: fadeInDown;
     animation-duration: 2s;
-} */
+}
 .statBoxContent {
     border-radius: 10px;
     display: flex;
@@ -85,7 +82,7 @@ body {
     /* left: 30%; */
     margin-top: -4%;
     padding: 0 3%;
->>>>>>> refs/remotes/origin/main
+
 }
 .statTitle {
     margin-top: 35%;
@@ -142,13 +139,10 @@ hr {
 	width: 3%;
 }
 .practiceServices {
-<<<<<<< HEAD
 	margin-right: 7%;
 	padding-bottom: 100px;
 }
 .practiceServiceItems {
-=======
->>>>>>> refs/remotes/origin/main
     display: flex;
     flex-direction: row;
     align-items: center;
